** (2013-04-06) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update base setup (hypervisor and OS)
	- Use Intro / Architecture / Deployment and uses pattern

** (2013-04-05) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Small updates on database part
	- Introduce architectural information on platform

** (2013-03-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Puppet: more info on local apply

** (2013-02-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add info on records/domains/zone/view/instances on DNS

** (2013-01-27) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Paragraph on SSH finger prints in DNS (as example service)

** (2013-01-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Add info on git and gitolite

** (2013-01-20) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Expand on CA certificate server

** (2013-01-04) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update puppet configuration

** (2012-12-21) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update example puppet settings
	- Add some information on the puppet files (site, node, patterns,
	  modules)

** (2012-12-19) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Architecturing puppet
	- Adding puppet information in cfg/ location

** (2012-12-18) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Update puppet for multi-master setup

** (2012-12-17) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Finish off DNSSEC-related operations
	- Add in Puppet/Git chapter for central configuration management

** (2012-12-16) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Added in regular operations view, enhanced zone handling to use domain
	  as file name.

** (2012-12-13) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Updates on BIND, attempt to use a more structural approach on the
	  components.

** (2012-11-01) Sven Vermeulen <sven.vermeulen@siphos.be>
	- Drop Ganeti docs, focus on KVM only for now
	- Start with MySQL doc

** (2012-08-17) Sven Vermeulen <sven.vermeulen@siphos.be>