@@ -1,0 +1,11 @@
+# Yes, even this file is managed by Puppet
+[main]
+    logdir = /var/log/puppet
+    rundir = /var/run/puppet
+    ssldir = $vardir/ssl
+    modulepath = /mnt/puppet/forge-modules:/mnt/puppet/modules
+    manifest = /mnt/puppet/manifests/site.pp
+
+[agent]
+    classfile = $vardir/classes.txt
+    localconfig = $vardir/localconfig
