@@ -55,12 +55,12 @@
 	offsite knowledge storage ;-)
       </para>
       <para>
-        The version you are reading currently is v0.17 and has been generated
+        The version you are reading currently is v0.18 and has been generated
 	on 2013/04/06.
       </para>
     </abstract>
 
-    <edition>AGLARA v0.17</edition> <!-- Update above paragraph too!! -->
+    <edition>AGLARA v0.18</edition> <!-- Update above paragraph too!! -->
 
     <copyright>
       <year>2013</year>
