@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="PostgreSQL Server" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="130" y="70" width="200" height="200" as="geometry"/></mxCell><mxCell id="3" value="PostgreSQL" style="shape=cylinder;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="20" y="100" width="60" height="80" as="geometry"/></mxCell><mxCell id="4" value="pg_rman" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="70" y="40" width="120" height="50" as="geometry"/></mxCell><mxCell id="5" value="backup&#xa;catalog" style="shape=folder;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="110" y="110" width="70" height="60" as="geometry"/></mxCell><mxCell id="8" value="" style="endArrow=none;startArrow=classic;startFill=1" edge="1" parent="2" source="4" target="3"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="9" value="" style="endArrow=classic;endFill=1" edge="1" parent="2" source="4" target="5"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="6" value="NFS Service" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="1"><mxGeometry x="490" y="180" width="140" height="60" as="geometry"/></mxCell><mxCell id="7" value="Store backup files&#xa;and metadata remotely" style="endArrow=classic;startArrow=classic;startFill=1;endFill=1" edge="1" parent="1" source="6" target="5"><mxGeometry relative="1" as="geometry"/></mxCell></root></mxGraphModel>
