@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="DB Load Balancer" style="rounded=1;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="300" y="50" width="120" height="60" as="geometry"/></mxCell><mxCell id="3" value="" style="shape=cylinder;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="250" y="160" width="60" height="80" as="geometry"/></mxCell><mxCell id="4" value="" style="shape=cylinder;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="390" y="160" width="60" height="80" as="geometry"/></mxCell><mxCell id="6" value="Master DB" style="text;spacingTop=-5;align=center" vertex="1" parent="1"><mxGeometry x="240" y="250" width="80" height="20" as="geometry"/></mxCell><mxCell id="7" value="Standby DB" style="text;spacingTop=-5;align=center" vertex="1" parent="1"><mxGeometry x="380" y="250" width="80" height="20" as="geometry"/></mxCell><mxCell id="8" value="replicate" style="endArrow=classic;endFill=1" edge="1" parent="1" source="3" target="4"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="9" value="read/write" style="endArrow=classic;elbow=horizontal;endFill=1" edge="1" parent="1" source="2" target="3"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="10" value="read" style="endArrow=classic;endFill=1" edge="1" parent="1" source="2" target="4"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="12" value="Client requests" style="shape=step;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="70" y="65" width="120" height="30" as="geometry"/></mxCell><mxCell id="15" value="" style="endArrow=classic;endFill=1" edge="1" parent="1" source="12" target="2"><mxGeometry relative="1" as="geometry"/></mxCell></root></mxGraphModel>
