@@ -1,0 +1,1 @@
+<mxGraphModel dx="800" dy="800" grid="1" guides="1" tooltips="1" connect="1" fold="1" page="1" pageScale="1" pageWidth="826" pageHeight="1169" style="default-style2"><root><mxCell id="0"/><mxCell id="1" parent="0"/><mxCell id="2" value="Master PostgreSQL Server" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="80" y="50" width="230" height="200" as="geometry"/></mxCell><mxCell id="5" value="PostgreSQL" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="50" y="30" width="140" height="60" as="geometry"/></mxCell><mxCell id="7" value="Data&#xa;files" style="shape=cylinder;whiteSpace=wrap" vertex="1" parent="2"><mxGeometry x="20" y="110" width="60" height="80" as="geometry"/></mxCell><mxCell id="10" value="" style="endArrow=none" edge="1" parent="2" source="7" target="5"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="13" value="sync&#xa;command" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="2"><mxGeometry x="100" y="120" width="110" height="60" as="geometry"/></mxCell><mxCell id="14" value="" style="endArrow=none" edge="1" parent="2" source="7" target="13"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="3" value="Standby PostgreSQL Server" style="swimlane;whiteSpace=wrap" vertex="1" parent="1"><mxGeometry x="380" y="210" width="290" height="200" as="geometry"/></mxCell><mxCell id="8" value="Data&#xa;files" style="shape=cylinder;whiteSpace=wrap" vertex="1" parent="3"><mxGeometry x="10" y="110" width="60" height="80" as="geometry"/></mxCell><mxCell id="15" value="sync&#xa;destination" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="20" y="40" width="140" height="60" as="geometry"/></mxCell><mxCell id="17" value="" style="endArrow=classic;endFill=1" edge="1" parent="3" source="15" target="8"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="18" value="PostgreSQL" style="whiteSpace=wrap;label;image=img/clipart/Gear_128x128.png" vertex="1" parent="3"><mxGeometry x="120" y="110" width="140" height="60" as="geometry"/></mxCell><mxCell id="19" value="" style="endArrow=none" edge="1" parent="3" source="18" target="8"><mxGeometry relative="1" as="geometry"/></mxCell><mxCell id="16" value="WAL&#xa;shipping" style="endArrow=none;edgeStyle=entityRelationEdgeStyle" edge="1" parent="1" source="13" target="15"><mxGeometry relative="1" as="geometry"/></mxCell></root></mxGraphModel>
